Update note edit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,31 +4,50 @@
     <title>FitNotes</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script src="https://kit.fontawesome.com/ef1a52193c.js" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-
-  <% if user_signed_in? %>
-    <ul class="nav nav-tabs">
-      <li role="presentation"><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
-      <li role="presentation"><a class="username">ユーザー名: <%= current_user.name %></a></li>
-      <li role="presentation"><%= link_to 'トップ', root_path %></li>
-      <li role="presentation"><%= link_to 'マイページ', user_path(current_user) %></li>
-      <li role="presentation"><%= link_to 'マイノート', my_notes_path(current_user) %></li>
-      <li role="presentation"><%= link_to 'ノートを作成する', new_note_path %></li>
-      <li role="presentation"><%= link_to 'ストップウォッチ', stopwatch_path %></li>
-    </ul>
-  <% else %>
-    <ul class="nav nav-tabs">
-      <li role="presentation"><%= link_to '新規登録', new_user_registration_path %></li>
-      <li role="presentation"><%= link_to 'ログイン', new_user_session_path %></li>
-      <li role="presentation"><%= link_to 'トップ', root_path %></li>
-    </ul>
-  <% end %>
+    <div class="nav-custom">
+      <% if user_signed_in? %>
+        <ul class="nav nav-list">
+          <li><%= link_to 'Fit Notes', root_path, class:"btn" %></li>
+          <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class:"btn" %></li>
+          <li><a class="username btn">ユーザー名: <%= current_user.name %></a></li>
+          <li><%= link_to 'トップ', root_path, class:"btn" %></li>
+          <li><%= link_to 'マイページ', user_path(current_user), class:"btn" %></li>
+          <li><%= link_to 'マイノート', my_notes_path(current_user), class:"btn" %></li>
+          <li><%= link_to 'ノートを作成する', new_note_path, class:"btn" %></li>
+          <li><%= link_to 'ストップウォッチ', stopwatch_path, class:"btn" %></li>
+        </ul>
+      <% else %>
+        <ul class="nav nav-tabs">
+          <li><%= link_to 'Fit Notes', root_path, class:"btn" %></li>
+          <li><%= link_to '新規登録', new_user_registration_path, class:"btn" %></li>
+          <li><%= link_to 'ログイン', new_user_session_path, class:"btn" %></li>
+          <li><%= link_to 'トップ', root_path, class:"btn" %></li>
+        </ul>
+      <% end %>
+    </div>
 
     <%= yield %>
+
+    <footer>
+      <div>
+        ページトップへ戻る
+      </div>
+      <div>
+        <div class="container">
+          <h2>Fit Notes</h2>
+          <h5>Fit Notesについて</h5>
+          <div class="copyright">
+            <small>© 2020 Fit Notes</small>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
