--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@
 	--second-color: #565d63;
 	--width-custom: 20px 30px 30px 30px;
 	--border-color: #ddd;
+	--note-title-color: #d7847e;
 }
 body {
 	margin: 0 auto;
@@ -26,9 +27,24 @@ body {
 	display: flex;
 	flex-direction: column;
 }
-header {
-	height: 150px;
-	background-color: #FFFFEE;
+// nav
+.nav-custom {
+	padding: 20px 50px;
+	font-size: 15px;
+	border-bottom: 2px solid #eee;
+	background: var(--main-color);
+}
+.nav-list li {
+	float: left;
+}
+.nav-list li a {
+	color: white;
+}
+.nav-list li a:hover {
+	color: white;
+	background: transparent;
+	border: 1px solid white;
+	border-radius: 3px;
 }
 section {
 	min-height: 90vh;
@@ -42,9 +58,6 @@ nav {
 main {
 	flex: 1;
 	background-color: #FFEEFF;
-}
-footer {
-	margin-top: 50px;
 }
 footer > div:first-child {
 	background: var(--second-color);
@@ -72,39 +85,12 @@ footer h5 {
 	margin-top: 120px;
 	padding-top: 30px;
 }
-// nav
-.nav-custom {
-	padding: 20px 50px;
-	font-size: 15px;
-	border-bottom: 2px solid #eee;
-	background: var(--main-color);
-}
-.nav-list li {
-	float: left;
-}
-.nav-list li a {
-	color: white;
-}
-.nav-list li a:hover {
-	color: white;
-	background: transparent;
-	border: 1px solid white;
-	border-radius: 3px;
-}
+
 .username {
 	color: black;
 	text-decoration: none;
 	font-weight: bold;
 }
-// side-nav
-// .side-nav {
-// 	list-style: none;
-// 	font-size: 17px;
-// }
-// .side-nav li {
-// 	margin-top: 50px;
-// }
-
 // user-show
 .user-show-profile {
 	padding: var(--width-custom);
@@ -220,7 +206,7 @@ footer h5 {
 	height: 50px;
 	line-height: 50px;
 	border-bottom: 1px solid var(--border-color);
-	background: #d7847e;
+	background: var(--note-title-color);
 }
 .each-note-title a {
 	color: white;
@@ -233,7 +219,7 @@ footer h5 {
 	border: none;
 	border-radius: 50%;
 }
-.dropdown-menu {
+.dropdown-menu-custom {
 	min-width: 100px !important;
 	text-align: center !important;
 	top: 13px !important;
@@ -242,7 +228,7 @@ footer h5 {
 
 .list-item {
 	padding: 10px 25px;
-	border-bottom: 1px solid #ddd;
+	border-bottom: 1px solid var(--border-color);
 	font-size: 13px;
 }
 .list-item > table {
@@ -263,7 +249,6 @@ footer h5 {
 	opacity: 0.3;
 	pointer-events: none;
 }
-// ---------------------------------------
 
 // form-field-size------------------------
 .form-control {
@@ -272,11 +257,10 @@ footer h5 {
 .sm-field {
 	width: 100px;
 }
-// ---------------------------------------
 
-// exercise-form--------------------------
+// exercise-form
 .exercise-form {
-	margin: 20px;
+	margin: 40px 20px;
 }
 .exercise-form div {
 	margin: 10px;
@@ -284,55 +268,90 @@ footer h5 {
 .asterisk {
 	color: red;
 }
-// exercise-name-field-----------
 .exercise-name-field {
 	width: 300px;
 }
-// ------------------------------
-// exercise-note-field-----------
 .exercise-note-field {
 	resize: none;
 	width: 550px;
 }
-// ------------------------------
-// add-btn-----------------------
 .add-btn-width {
 	width: 550px;
 }
-// ------------------------------
-// cancel-btn--------------------
 .cancel-btn {
 	width: 30px;
 	height: 30px;
 	border-radius: 50%;
 }
-// ------------------------------
-// hide-exercise-field-----------
 .hide-field {
 	display: none;
 }
-// ------------------------------
 .show-field, .add-btn, .flex-end {
 	display: flex;
 	justify-content: flex-end;
 }
 
-// note-show------------------------------
-.note-show {
-	padding: 20px;
-	margin: 50px;
-	border: 1px solid #ddd;
-    border-radius: 20px;
+
+
+
+
+// notes
+.note {
+	margin: 50px auto;
+	border-radius: 20px;
+	border: 1px solid var(--border-color);
+	overflow: scroll;
+	width: 750px;
 }
-.edit-note-name {
-	display: none;
+.new-note-title {
+	font-size: 16px;
+	padding: 15px;
+	text-align: center;
+	border-bottom: 1px solid var(--border-color);
 }
+
+.exercise-name {
+	display: flex;
+	margin-top: 40px;
+	margin-left: 80px;
+	height: 34px;
+	line-height: 34px;
+}
+.exercise-name p {
+	margin-right: 30px;
+	font-weight: bold;
+	font-size: 17px;
+	margin-bottom: 0;
+}
+.exercise-name > span > :first-child {
+	margin-right: 15px;
+}
+// .actions-2 {
+// 	background: transparent;
+// 	border: none;
+// 	border-radius: 50%;
+// }
+.note-exercise-table {
+	font-size: 15px;
+	margin-left: 60px;
+}
+
 .edit-note-name-icon {
-	color: #72CA5C;
+	cursor: pointer;
 }
-.edit-note-name-icon:hover .edit-note-name {
-	display: inline;
+.submit-btn {
+	height: 34px;
+	background: var(--main-color);
+	color: white;
 }
+
+
+
+
+
+
+
+
 .edit-note-name-form {
 	display: none;
 }
@@ -340,7 +359,9 @@ footer h5 {
 	width: 150px;
 	padding: 10px;
 	margin: 10px;
-	border: 1px solid #ddd;
+	border-radius: 20px;
+	border: 1px solid var(--border-color);
+	text-align: center;
 }
 .note-exercise-table {
 	margin-top: 20px;
@@ -357,21 +378,22 @@ footer h5 {
 	min-height: 100px;
 	width: 550px;
 	padding: 10px;
-	border: 1px solid #ddd;
+	border: 1px solid var(--border-color);
 	border-radius: 5px;
+	margin-right: 30px;
 }
 
-.edit-text {
-	display: none;
-	font-size: 12px;
-}
-.edit-exercise-icon:hover .edit-text{
-	display: inline;
-}
+
 
 .add-new-exercise-btn {
 	margin: 20px 0;
 }
+
+
+
+// 削除する
+// .edit-text
+// .edit-exercise-icon
 
 // timer
 .timer-main {
