--- a/app/views/homes/stopwatch.html.erb
+++ b/app/views/homes/stopwatch.html.erb
@@ -1,11 +1,15 @@
-<div class="container">
-  <div class="timer-main">
-    <div id="timer">00:00.000</div>
-    <div class="timer-btns">
-      <div class="btn timer-btn" id="start">Start</div>
-      <div class="btn timer-btn" id="stop">Stop</div>
-      <div class="btn timer-btn" id="reset">Reset</div>
+<section>
+  <main>
+    <div class="container">
+      <div class="timer-main">
+        <div id="timer">00:00.000</div>
+        <div class="timer-btns">
+          <div class="btn timer-btn" id="start">Start</div>
+          <div class="btn timer-btn" id="stop">Stop</div>
+          <div class="btn timer-btn" id="reset">Reset</div>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-<script src="assets/stopwatch.js"></script>
+    <script src="assets/stopwatch.js"></script>
+  </main>
+</section>
