--- a/app/views/users/my_notes.html.erb
+++ b/app/views/users/my_notes.html.erb
@@ -18,7 +18,7 @@
 								<button type="button" class="btn dropdown-toggle actions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 									<span class="caret"></span>
 								</button>
-								<ul class="dropdown-menu">
+								<ul class="dropdown-menu dropdown-menu-custom">
 									<li>
 										<%= link_to edit_note_path(note) do %>
 											<i id="abc"class="fas fa-pencil-alt"></i> 編集する
