--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,12 +1,13 @@
 <div class="container">
-	<div class="row">
-		<div class="note-show">
-			<div align="center" class="list-group-item list-group-item-info z">
+
+
+		<div class="note">
+			<div class="new-note-title">
 				<%= form_for @note do |f| %>
 					<p>ノート名を入力してください</p>
 					<label>ノート名<span class="asterisk">*</span> : </label>
 					<%= f.text_field :name, autofocus: true, autocomplete: true, placeholder:"ノート名", class:"form-control exercise-name-field" %>
-					<%= f.submit '作成', class:"btn btn-sm btn-primary" %>
+					<%= f.submit '作成', class:"btn submit-btn" %>
 				<% end %>
 			</div>
 
@@ -46,5 +47,5 @@
 				</div>
 			</div>
 		</div>
-	</div>
+
 </div>
