Add flash notice

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
           <li><%= link_to 'ストップウォッチ', stopwatch_path, class:"btn" %></li>
         </ul>
       <% else %>
-        <ul class="nav nav-tabs">
+        <ul class="nav nav-list">
           <li><%= link_to 'Fit Notes', root_path, class:"btn" %></li>
           <li><%= link_to '新規登録', new_user_registration_path, class:"btn" %></li>
           <li><%= link_to 'ログイン', new_user_session_path, class:"btn" %></li>
