--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,6 +54,9 @@ nav {
 	width: 200px;
 	background-color: #EEFFFF;
 }
+main {
+	flex: 1;
+}
 footer > div:first-child {
 	background: var(--second-color);
 	height: 30px;
@@ -134,12 +137,12 @@ footer h5 {
 	padding: 10px;
 	border: 1px solid var(--border-color);
 	border-radius: 5px;
-	background-color: #D9F0F3;
 	display: inline-block;
 }
 .notes-list {
 	list-style: none;
-	margin: 10px
+	margin: 10px;
+	padding-right: 40px;
 }
 .notes-list li {
 	padding: 10px 0;
@@ -392,6 +395,35 @@ footer h5 {
 }
 .inactive {
   opacity: 0.6;
+}
+// message
+.message {
+	min-width: 300px;
+  border-radius: 4px;
+  padding: 8px 16px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
+  background: royalblue;
+  color: #ddd;
+  position: fixed;
+  left: 55px;
+  top: 90px;
+
+  animation: popup 3s forwards;
+}
+@keyframes popup {
+  0% {
+    transform: translateY(-20px);
+    opacity: 0;
+    animation-timing-function: ease-out;
+  }
+  20%, 80% {
+    transform: none;
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-20px);
+    opacity: 0;
+	}
 }
 
 @media screen and (max-width:900px) {
