--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,9 @@
 <section>
+  <% if flash[:notice].present? %>
+    <div class="message">
+      <%= flash[:notice] %>
+    </div>
+  <% end %>
   <nav></nav>
   <main>
     <h1>トップページ</h1>
