--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,3 +1,8 @@
+<% if flash[:notice].present? %>
+	<div class="message">
+		<%= flash[:notice] %>
+	</div>
+<% end %>
 <div class="container">
 	<div class="note">
 		<div class="new-note-title">
