--- a/app/views/users/my_notes.html.erb
+++ b/app/views/users/my_notes.html.erb
@@ -1,4 +1,9 @@
 <section>
+<% if flash[:notice].present? %>
+	<div class="message">
+		<%= flash[:notice] %>
+	</div>
+<% end %>
 	<nav></nav>
 	<main>
 		<div class="mynotes-nav">
