--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
 
     <footer>
       <div>
-        ページトップへ戻る
+        <a href="#" class="page-top"><p>ページトップへ戻る</p></a>
       </div>
       <div>
         <div class="container">
